Add .gitignore and ignore xcschememanagement.plist

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+RecipeApplication.xcodeproj/xcuserdata/likanozadze.xcuserdatad/xcschemes/xcschememanagement.plist
+
 .DS_Store
 
 RecipeApplication.xcodeproj/project.xcworkspace/xcuserdata/likanozadze.xcuserdatad/UserInterfaceState.xcuserstate
